# galatiq-case-invoices

./: .gitignore  README.md  pyproject.toml  roadmap.md
app/: __init__.py  cli.py  config.py  db.py  models.py  orchestrator.py
app/agents/: __init__.py  approval.py  ingestion.py  payment.py  validation.py
app/parsers/: __init__.py  base.py  csv_parser.py  json_parser.py  pdf_parser.py  txt_parser.py  xml_parser.py
app/reasoning/: __init__.py  base.py  ollama.py  rule_based.py
data/: generate_pdfs.py
data/invoices/: invoice_1001.txt  invoice_1002.txt  invoice_1003.txt  invoice_1004.json  invoice_1004_revised.json  invoice_1005.json  invoice_1006.csv  invoice_1007.csv  invoice_1008.txt  invoice_1009.json  invoice_1010.txt  invoice_1011.txt  invoice_1012.txt  invoice_1013.json  invoice_1014.xml  invoice_1015.csv  invoice_1016.json
scripts/: bootstrap_db.py
tests/: __init__.py  conftest.py  test_pipeline.py
tests/approval/: test_approval.py
tests/cli/: test_cli_batch.py
tests/observability/: test_observability.py
tests/parsers/: test_pdf_parser.py  test_txt_parser.py
tests/pipeline/: test_pipeline.py
tests/reasoning/: test_reasoning.py
tests/validation/: test_validation.py
