[project]
name = "galatiq-case-invoices"
version = "0.1.0"
description = "Invoice automation MVP prototype"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ollama_live: exercises the local Ollama server with live adversarial prompts",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
